[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Register/Register.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Cave-Story.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/greenery.jpg" type="Texture" id=4]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 15
outline_color = Color( 0.666667, 0.376471, 0.156863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=6]
flags = 4
load_path = "res://.import/arrow_wood_left.png-d26b75d347a358e75b7cfb7949c75afa.stex"

[sub_resource type="StreamTexture" id=7]
flags = 4
load_path = "res://.import/button-normal.png-3f53210e640512f93b070c8f9e6bd389.stex"

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.85001
margin_top = -31.35
margin_right = 2.84998
margin_bottom = -31.3501
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 0.74
margin_left = 206.0
margin_top = 296.0
margin_right = 213.5
margin_bottom = 724.0
alignment = 1

[node name="Username" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 470.0
margin_bottom = 136.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="VBoxContainer/Username"]
margin_right = 117.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Username:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Username"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
align = 2

[node name="Password" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 470.0
margin_bottom = 174.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/Password"]
margin_right = 115.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Password: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Password"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 3 )
secret = true

[node name="Confirm" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 470.0
margin_bottom = 212.0
custom_constants/separation = 22

[node name="Label" type="Label" parent="VBoxContainer/Confirm"]
margin_right = 101.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Confirm: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Confirm"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 3 )
secret = true

[node name="Class" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 470.0
margin_bottom = 250.0
custom_constants/separation = 56

[node name="Label" type="Label" parent="VBoxContainer/Class"]
margin_right = 68.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Class: "

[node name="LineEdit" type="OptionButton" parent="VBoxContainer/Class"]
margin_left = 124.0
margin_right = 224.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "SSP4"
align = 1
items = [ "SSP1", null, false, 0, null, "SSP2", null, false, 1, null, "SSP3", null, false, 2, null, "SSP4", null, false, 3, null ]
selected = 3

[node name="Name" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 470.0
margin_bottom = 288.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer/Name"]
margin_right = 73.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Name: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Name"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="Domain2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 470.0
margin_bottom = 326.0
custom_constants/separation = 34

[node name="Label" type="Label" parent="VBoxContainer/Domain2"]
margin_right = 90.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Domain: "

[node name="LineEdit" type="OptionButton" parent="VBoxContainer/Domain2"]
margin_left = 124.0
margin_right = 241.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = SubResource( 2 )
text = "STUDENT"
align = 1
items = [ "STUDENT", null, false, 0, null, "TEACHER", null, false, 1, null ]
selected = 0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="HTTPRequest4" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 82.21
margin_top = 179.002
margin_right = 554.21
margin_bottom = 366.002
custom_fonts/font = SubResource( 4 )
text = "World Of 
Software"
align = 1

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 742.0
margin_right = 621.0
margin_bottom = 833.0
custom_constants/separation = 51
alignment = 1

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 822.541, 777.093 )
scale = Vector2( 0.861151, 1.37456 )
texture = ExtResource( 4 )

[node name="Notification" type="Label" parent="."]
margin_left = 8.0
margin_top = 634.0
margin_right = 626.0
margin_bottom = 741.0
custom_fonts/font = SubResource( 5 )
align = 1

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 66.0
margin_right = 103.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 6 )
expand = true

[node name="RegisterButton" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 697.0
margin_right = 450.0
margin_bottom = 787.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 7 )
expand = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 8

[node name="Label2" type="Label" parent="CanvasLayer2"]
margin_left = 267.0
margin_top = 689.0
margin_right = 384.0
margin_bottom = 729.0
custom_fonts/font = SubResource( 8 )
text = "Register"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Bg" parent="CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 162.355, -141.265 )
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="request_completed" from="HTTPRequest3" to="." method="_on_HTTPRequest3_request_completed"]
[connection signal="request_completed" from="HTTPRequest4" to="." method="_on_HTTPRequest4_request_completed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_RegisterButton_pressed"]
